0.8.1.h
    - MAXHOSTNAMELEN bug fixed
    - RBL logging now includes failure/accept codes
    - better receive logging
    - DATA_SESSION_WAIT added to simta.c
    - bug: JAIL_HOST bugfixes

0.8.1.g
    - logging bugfixes

0.8.1.f
    - snet bugfixes

0.8.1.e
    - bugfix

0.8.1.d
    - content filter now logs who AUTHed

0.8.1.c
    - f_data better optimized for content filter
    - better error propagation

0.8.1.b
    - bugfix TARPIT rcpt to always accepts
    - bugfix for content filter illegal accept return in tarpit mode
    - bugfixes for libsnet
    - log change for base64 encode errors
    - receive always checks for write before banner

0.8.1.a
    - content filter message propogated to SMTP client
    - LIBWRAP_URL directive added
    - content filter check for write before banner happens on all connections
    - bugfix for RBL disconnect
    - content filter supports mail jail
    - content filter no longer opens Dfile on stdin
    - content filter envoked in every delivery mode
    - content filter return value now a bitfield
    - content filter supports DISCONNECT

0.8.0.6
    - tarpit_sleep() optimized

0.8.0.5
    - bugfix: return SMTP mode to the user default mode after auth

0.8.0.4
    - bugfix: f_data connection drop after message acceptance error

0.8.0.3
    - multiple Queue Added bugfix

0.8.0.2
    - bitbucket bugfix

0.8.0.1
    - simsendmail logs message size
    - bitbucket delivery option for deliver testing
    - better Daemon logging
    - local queue runner accounting bugfix

0.8.0
    - SMTP failed rcpt punishment bugfix
    - DISCONNECT is a possible failed rcpt punishment
    - faster disk read times
    - outbound SMTP DNS has better logging and is more consice
    - better process accounting, and logging
    - better listen connection management
    - consolidate envelope reading functions, and make mismatches non-fatal
    - uninitilized variable bugfix
    - AGGRESSIVE_DELIVERY option and behavior added